# bazel_filegroup_pkg_tar

./: BUILD.bazel  README  test.sh
